<resources>
    <string name="app_name">NoteOrganizer</string>
    <string name="title_notes">Заметки</string>
    <string name="title_tasks">Задачи</string>
    <string name="title_settings">Настройки</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Веремеенко Дмитрий</string>
    <string name="nav_header_subtitle">StDimensiy@yandex.ru</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="whiteTheme">Светлая тема</string>
    <string name="nightTheme">Темная тема</string>
    <string name="groupName_optional">Дополнительно</string>
    <string name="nameMenuItem_accaunt">Учетная запись</string>
    <string name="nameMenuItem_authorized">Авторизация</string>
    <string name="menuItemOptional_calculator">Калькулятор</string>
    <string name="menuItemOptional_criticism">Отзывы</string>
    <string name="edit_note_title">Редактирование заметки</string>
    <string name="edit_note_btn_save_text">Сохранить изменения</string>
    <string name="edit_task_btn_save_text">Сохранить изменения в задаче</string>
    <string name="default_note_title">Новая заметка...</string>
    <string name="default_note_content">...</string>
    <string name="default_note_view">usual</string>
    <string name="default_note_type">other</string>
    <string name="default_task_title">Новая задача</string>
    <string name="default_task_content" />
    <string name="default_task_type">other</string>
    <string name="default_task_view">usual</string>
    <string name="options_menu_action_help">Инструкция</string>
    <string name="options_menu_action_delete_All">Удалить все задачи</string>
    <string name="options_menu_action_settings">Настройки</string>
    <string name="options_menu_action_create_new_type_task">Новый тип</string>
    <string name="options_menu_action_create_new_task">Новая задача</string>
    <string name="options_menu_action_delete_task">Удалить задачу</string>
    <string name="options_menu_action_refuse_task">Отказаться от выполнения задачи</string>
    <string name="options_menu_action_deffer_task">Отлижить задачу</string>
    <string name="options_menu_action_edit_task">Редактировать параметры задачи</string>
    <string name="options_menu_action_clone_task">Клонировать задачу</string>
    <string name="options_closeApp">Закрыть приложение</string>
    <string name="options_menu_action_help_settings">Инструкция</string>
    <string name="options_menu_action_create_new_note">Новая заметка</string>
    <string name="options_menu_action_create_new_theme_notes">Новая тема</string>
    <string name="options_menu_action_settings_notes">Настройки</string>
    <string name="options_menu_action_help_notes">Инструкция</string>
    <string name="options_menu_action_clear_All_Notes">Удалить все заметки</string>
    <string name="context_menu_action_delete_note">Удалить заметку</string>
    <string name="app_name_present">Note ORGANIZER</string>
    <string name="app_version_present">0.1.2</string>
    <string name="alert_title_warning">Внимание !!!</string>
    <string name="tasks_alert_delete_all_message">Все задачи будут безвозвратно уделены из базы данных. Вы уверены в своем решении?</string>
    <string name="text_answer_is_yes">Да</string>
    <string name="text_answer_is_no">Нет</string>
    <string name="notes_alert_delete_all_message">Все ваши заметки будут безвозвратно уделены из базы данных.\nВы уверены в своем решении?</string>
    <string name="task_dialog_input_title_title">Введите краткое наименование задачи.</string>
    <string name="task_dialog_create_new_btn_ok_text">Добавить</string>
    <string name="dialog_cancel_text">Отмена</string>
    <string name="note_dialog_input_title_title">Создание новой заметки.</string>
    <string name="note_dialog_title_comment">Введите краткое наименование заметки</string>
    <string name="note_dialog_content_comment">Введите содержание заметки (не обязательно)</string>
</resources>