<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/grp1">
        <item
            android:id="@+id/action_new_note"
            android:orderInCategory="100"
            android:title="@string/options_menu_action_create_new_note"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_new_theme"
            android:orderInCategory="100"
            android:title="@string/options_menu_action_create_new_theme_notes"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/options_menu_action_settings_notes"
            app:showAsAction="never" />
    </group>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/options_menu_action_help_notes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_all_notes"
        android:orderInCategory="100"
        android:title="@string/options_menu_action_clear_All_Notes"
        app:showAsAction="never" />
</menu>