<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_dialog_title_comment"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SmallSp"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/dialog_new_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_note_title"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_dialog_content_comment"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/dialog_new_title"
        tools:ignore="SmallSp" />

    <EditText
        android:id="@+id/dialog_new_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_note_content"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


</androidx.constraintlayout.widget.ConstraintLayout>