<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notes">

    <fragment
        android:id="@+id/navigation_notes"
        android:name="ru.geekbrains.acquaintancewithandroid.hw.noteorganizer.ui.notes.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes" >
        <action
            android:id="@+id/action_navigation_notes_to_newEditNoteFragment"
            app:destination="@id/EditNoteFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_tasks"
        android:name="ru.geekbrains.acquaintancewithandroid.hw.noteorganizer.ui.tasks.TasksFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="ru.geekbrains.acquaintancewithandroid.hw.noteorganizer.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/EditNoteFragment"
        android:name="ru.geekbrains.acquaintancewithandroid.hw.noteorganizer.ui.notes.edit.EditNoteFragment"
        android:label="Редактирование заметки"
        tools:layout="@layout/fragment_edit_note" >
        <action
            android:id="@+id/action_EditNoteFragment_to_navigation_notes"
            app:destination="@id/navigation_notes" />
        <argument
            android:name="note"
            app:argType="ru.geekbrains.acquaintancewithandroid.hw.noteorganizer.domain.Note" />
    </fragment>
</navigation>